<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".LoginFragment">

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:background="@drawable/aestheticbg"
       />

  <TextView
      android:id="@+id/tv_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textSize="40sp"
      android:textColor="@color/HeaderColor"
      android:fontFamily="@font/pacificoregular"
      android:layout_marginStart="25dp"
      android:layout_marginBottom="5dp"
      android:layout_above="@id/tv_subtitle"/>

  <TextView
      android:id="@+id/tv_subtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/taglogin"
      android:textSize="17sp"
      android:fontFamily="@font/roboto_regular"
      android:layout_marginStart="25dp"
      android:layout_marginBottom="50dp"
      android:layout_above="@id/moodleId"/>

  <EditText
      android:id="@+id/moodleId"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:hint="@string/e_mail"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:padding="15dp"
      android:inputType="textEmailAddress"
      android:textCursorDrawable="@null"
      android:fontFamily="@font/roboto_regular"
      android:layout_above="@id/password"
      android:background="@drawable/textboxes_shape"
      android:elevation="7dp"
      android:textColor="@color/HeaderColor"
      android:textSize="15sp" />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:hint="@string/password"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="10dp"
      android:padding="15dp"
      android:fontFamily="@font/roboto_regular"
      android:textCursorDrawable="@null"
      android:textColor="@color/HeaderColor"
      android:inputType="textPassword"
      android:layout_centerInParent="true"
      android:background="@drawable/textboxes_shape"
      android:elevation="7dp"
      android:textSize="15sp" />

  <Button
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/password"
      android:background="@drawable/button_shape"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="30dp"
      android:fontFamily="@font/roboto_regular"
      android:textColor="@android:color/white"
      android:text="Login"/>

  <ProgressBar
      android:id="@+id/progress_circular"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_centerHorizontal="true"
      android:indeterminateTint="@color/colorPrimary"
      android:background="@drawable/progressbg"
      android:visibility="invisible"
      >
  </ProgressBar>

  <ImageView
      android:id="@+id/arrow"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:src="@drawable/ic_arrow_right"
      android:layout_above="@id/swipeRight"
      android:layout_centerHorizontal="true"/>

  <TextView
      android:id="@+id/swipeRight"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/swipe_left_for_register"
      android:textSize="15sp"
      android:fontFamily="@font/roboto_regular"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="20dp"/>

</RelativeLayout>