<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/registerFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment"

    android:background="@drawable/aestheticbg">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/pacificoregular"
        android:text="@string/register"
        android:textColor="@color/HeaderColor"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagsignin"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_firstname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:textCursorDrawable="@null"
        android:textColor="@color/HeaderColor"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/textboxes_shape"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_lastname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:textCursorDrawable="@null"
        android:textColor="@color/HeaderColor"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/textboxes_shape"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/moodleId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="MoodleId"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:textCursorDrawable="@null"
        android:textColor="@color/HeaderColor"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/textboxes_shape"
        android:textSize="15sp" />
<!--    <EditText-->
<!--        android:id="@+id/department"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:hint="@string/your_department"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:padding="15dp"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textCursorDrawable="@null"-->
<!--        android:textColor="@color/HeaderColor"-->
<!--        android:fontFamily="@font/roboto_regular"-->
<!--        android:background="@drawable/textboxes_shape"-->
<!--        android:textSize="15sp" />-->
    <Spinner
        android:id="@+id/department"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/spinner"
        android:spinnerMode="dropdown" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:textColor="@color/HeaderColor"
        android:background="@drawable/textboxes_shape"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textboxes_shape"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:textColor="@color/HeaderColor"
        android:padding="15dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/roboto_regular"
            android:text="Register"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/swipeLeft"
            android:layout_below="@+id/signup_button"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</LinearLayout>